[tool.poetry]
name = "ez-openai"
version = "0.0.4"
description = "A more reasonable OpenAI API."
authors = ["Stavros Korokithakis <hi@stavros.io>"]
repository = "https://github.com/skorokithakis/ez-openai/"
license = "AGPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7.1"
openai = ">=1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
ignore = ["F403", "E501", "N802", "N803", "N806", "C901", "D100", "D102", "D102", "D10"]
